test/deca/context/invalid/1_3_method_avant_field2.deca
// Description:
//   definition des methodes avant les fields
//
// Resultats:
//    Ligne 10

class A {
    int b;
    void rien() {
    }
    int a;
}
